more requirement fixes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>U.S. Drug Product Database</title>
+    <a href="{{url_for(app.home)}}" >Browse the U.S. Drug Product Database</a>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 
