--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,11 +1,16 @@
-form{
-	position:relative;
+.big-title{
+	text-align: center;
+	margin:auto;
+}
+
+.home-button{
+	margin:auto;
 }
 
 .table-container {
 	border: 5px;
-    width: 75%;
-    height: 75%;
+    width: 100%;
+    height: 100%;
     overflow: auto;
 	margin: auto;
 }
